this seems fine

--- a/container-engine-lib/.golangci.yml
+++ b/container-engine-lib/.golangci.yml
@@ -15,13 +15,13 @@ issues:
     - path: "lib/backend_impls/kubernetes/kubernetes_resource_collectors/postfilter_kubernetes_resources.go"
       text: "S1009: should omit nil check; len() for map[string]bool is defined as zero (gosimple)"
     - path: "lib/backend_impls/kubernetes/kubernetes_kurtosis_backend/shared_helpers/shared_helpers.go"
-      text: "field `filesArtifactExpansionVolumeSizeInMegabytes` is unused (unused)"
+      text: "filesArtifactExpansionVolumeSizeInMegabytes"
     - path: "lib/backend_impls/kubernetes/kubernetes_kurtosis_backend/shared_helpers/shared_helpers.go"
       text: "field `filesArtifactExpansionVolumeSizeInMegabytes` is unused (unused)"
     - path: "lib/backend_impls/kubernetes/kubernetes_kurtosis_backend/shared_helpers/shared_helpers.go"
       text: "field `storageClassName` is unused"
     - path: "lib/backend_impls/kubernetes/kubernetes_kurtosis_backend/shared_helpers/shared_helpers.go"
-      text: "field `enclaveDataVolumeSizeInMegabytes` is unused (unused)"
+      text: "enclaveDataVolumeSizeInMegabytes"
     - path: "lib/backend_impls/kubernetes/kubernetes_kurtosis_backend/shared_helpers/shared_helpers.go"
       text: "field `storageClassName` is unused (unused)"
     - path: "lib/operation_parallelizer/operation_parallelizer_test.go"
