add back git config

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -22,6 +22,7 @@ jobs:
         env:
           RELEASER_TOKEN: ${{ secrets.RELEASER_TOKEN }}
         run:  git config --global url."https://${RELEASER_TOKEN}@github.com/".insteadOf "https://github.com/"
+      - run:  go env -w "GOPRIVATE=github.com/kurtosis-tech/*"
       - name: lint-container-engine-lib
         uses: golangci/golangci-lint-action@v3
         with:
