--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           go-version: 1.17
       - uses: actions/checkout@v3
+      - run: scripts/generate-kurtosis-version.sh
       - name: Configure git for private modules
         env:
           RELEASER_TOKEN: ${{ secrets.RELEASER_TOKEN }}
