--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -135,6 +135,9 @@ parameters:
   engine-server-image-filename:
     type: string
     default: "engine-server-image.tgz"
+  startosis-test-script-file-relative-path:
+    type: string
+    default: "internal_testsuites/startosis/ci_tests/startosis_simple_script.star"
 
 
 
@@ -458,6 +461,7 @@ jobs:
           root: .
           paths:
             - "./<< pipeline.parameters.cli-dist-home-relative-dirpath >>"
+            - "./<< pipeline.parameters.startosis-test-script-file-relative-path >>"
 
   build_golang_testsuite:
     executor: ubuntu_vm
@@ -682,19 +686,7 @@ jobs:
       - run: "${KURTOSIS_BINPATH} enclave inspect test-enclave"
 
       # Execute simple startosis script in new enclave
-      - run:
-          name: "Execute basic startosis script inside the test-enclave"
-          command: |
-            tee /tmp/basic_cli_functionality_test_startosis_script.star \<< EOT
-            service_config = struct(
-              container_image_name = "kurtosistech/example-datastore-server",
-              used_ports = {
-                "grpc": struct(number = 1323, protocol = "TCP")
-              }
-            )
-            add_service(service_id = "example-datastore-server-startosis", service_config = service_config)
-            EOT
-            ${KURTOSIS_BINPATH} startosis exec --enclave-id test-enclave /tmp/basic_cli_functionality_test_startosis_script.star
+      - run: "${KURTOSIS_BINPATH} startosis exec --enclave-id test-enclave << pipeline.parameters.workspace-with-cli-binary-and-images-mountpoint >>/<< pipeline.parameters.startosis-test-script-file-relative-path >>"
 
       - run: "${KURTOSIS_BINPATH} enclave stop test-enclave"
       - run: "${KURTOSIS_BINPATH} enclave inspect test-enclave"   # Ensure we can still inspect stopped enclaves
