--- a/core/server/Dockerfile
+++ b/core/server/Dockerfile
@@ -1,6 +1,7 @@
 FROM  alpine:3.16.2
 
-RUN apk update && apk add bash
+# We need protobut-dev to run protobuf compiler against startosis .proto files
+RUN apk update && apk add --no-cache bash protobuf-dev
 
 WORKDIR /run
 
