Probably-working simplification of kurtosis version generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Ignoring the constants package at root
-/kurtosis_version
+# Ignoring the file that gets generated with the repo's version
+/kurtosis_version/kurtosis_version.go
 
 # IntelliJ
 .idea
