--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -878,6 +878,11 @@ jobs:
           sudo apt update
           sudo apt install kudet
 
+      # Install proto compiler. To compile startosis proto files on the fly, the APIC needs `protoc`
+      - run: |
+          sudo apt update
+          sudo apt install protobuf-compiler
+
       - checkout
 
       - setup_remote_docker:
